# backend/routes/api.php
@@ -32,5 +32,9 @@ Route::prefix('v1')->group(
 );
 
 Route::prefix('v1')->group(
+    base_path('app/Modules/Matching/Interfaces/Http/routes.php'),
+);
+
+Route::prefix('v1')->group(
     base_path('app/Modules/Dashboard/Interfaces/Http/routes.php'),
 );
